src/css/widgets.less
/* ... */
/* Страница рекомендаций - оформление информации */ 
.description-block{
	padding: 0 19px 25px!important;
	border-left: 1px solid #f0f0f0;
	/* Большой заголовок */ 
	.header-list{
		.gotham-m;
		font-size: 20px;
		margin: 25px 0;
		text-align: center;
		span{
			.gotham;
			font-size: 15px;
			color: rgba(0,0,0,.5);
		}
	}
	/* Серый подзаголовок с линий */
	.head-line{
		z-index: 0;
		margin: 18px 0;
		font-size: 14px;
		overflow: hidden;
		text-align: center;
		position: relative;
		color: rgba(0,0,0,0.5);
		/* множественный подзаголовок */
		&--three{
			div:first-child span{ padding-left: 0; }
			div:last-child span{ padding-right: 0; }
		}
		&:after{
			content: '';
			width: 100%;
			height: 1px;
			display: block;
			position: absolute;
			top: 50%; z-index: -1;
			background: rgba(0,0,0,0.1);
		}
		span{
			padding: 0 20px;
			background: #fff;
		}
	}
	p, span, li{ font-size: 14px; line-height: 16px; }
	p{ margin-bottom: 20px; }
	.time{ text-align: center; }
	.date{
		.gotham-m;
		font-size: 14px;
	}
	.icon-date:after{
		top: -2px;
		content: "";
		width: 15px;
		height: 16px;
		margin-left: 8px;
		position: relative;
		display: inline-block;
		vertical-align: middle;
		background: url(../img/icon-date.png) no-repeat;
	}
	.important-list{ 
		padding-left: 15px;
		li{ 
			margin: 10px 0; 
			list-style-type: disc;
		}
	}
	.risk-list{ 
		padding-left: 15px;
		li{ list-style-type: disc; }
	}
	.list{
	  text-align: center;

		list-style-type: none;
		margin-left: 0;
		padding-left: 0;

	}
	.diagnosis p{ padding-right: 10px; }
	.training{ text-align: center; }
	.clinic-title{
		display: block;
		padding-left: 58px;
		position: relative;
		background-image: url(../img/list-arrow.png);
		background-repeat: no-repeat;
		background-position: 99% 50%;


		&:hover *{
			color: @red-color;
		}
		p{ 
			.gotham-m;
			color: #000;
			font-size: 17px; 
			margin-bottom: 3px;
		}
		span{
			font-size: 14px;
			color: rgba(0,0,0,0.6);
			&:before{
				content: "";
				width: 10px;
				height: 12px;
				margin-right: 6px;
				display: inline-block;
				vertical-align: middle;
				background: url(../img/icon-map.png) no-repeat;
			}
		}
		&:before{
			content: "";
			width: 46px;
			height: 46px;
		  	border: 1px solid rgba(0, 0, 0, 0.2);
		  	border-radius: 50%;
			position: absolute;
			top: 50%; left: 0;
			transform: translateY(-50%);
		}
	  	&:after{
		  content: "";
		  width: 46px;
		  height: 46px;
		  position: absolute;
		  top: 30px; left: 10px;
		  transform: translateY(-50%);
		  background: url(../img/clinic-logo.png) no-repeat;
		}
	}
}

/* Настройка виджетов */

.settings-block{
	width: 100%;
	height: 100%;
	top: 0; left: 0;
	z-index: 100;
	position: fixed;
	
	// background: rgba(0,0,0,0.2);
	// filter: blur(5px);

	.background{
		width: 100%;
		height: 100%;
		top: 0; left: 0;
		z-index: 50;
		position: fixed;
		background: rgba(0,0,0,0.6);
	}
	
	.widgets-block{
	  display: table;
	  padding-bottom: 24px;
		width: 425px;
		background: #fff;
		position: fixed;
		top: 0; left: 0;
		right: 0; bottom: 0;
		margin: auto;
		border-radius: 15px;
		text-align: center;
		padding-top: 24px;
		z-index: 150;
	}
	.head{
		font-size: 17px;
		margin-bottom: 24px;
		font-family: 'Gotham-Medium';
	}
	
	.buttons{
		margin-top: 24px;
		.btn{
			margin: 0 10px;
		}
	}

	.btn{
		.gotham-m;
		color: @blue-color;
		cursor: pointer;
		font-size: 17px;
		line-height: 15px;
		display: inline-block;
		vertical-align: middle;
		border-radius: 20px;
		padding: 8px 20px 7px 20px;
		transition: 0.3s ease all;
		border: 1px solid @blue-color;
		&:hover{
			color: #fff;
			background: @blue-color;
		}
	}

	.icon-exit{
		width: 11px;
		height: 11px;
		display: block;
		cursor: pointer;
		position: absolute;
		top: 16px; right: 14px;
		background: url(../img/icon-exit-11.png) no-repeat;
		&:hover{
			opacity: 0.7;
		}
	}
}

.items-block{
  margin-bottom: 30px;
	.item{
		width: 98px;
		display: inline-block;
		vertical-align: top;
		margin: 5px;
		&-disabled{
			input[type="checkbox"] + label::before{ visibility: hidden; }
			label{
				opacity: 0.6;
				&:hover{ border-color: #ccc; }
			}
		}
	}
	
	label{
		width: 100%;
		padding: 5px;
		position: relative;
		text-align: center;
		
		min-height: 148px;
		border: 1px solid #ccc;
		border-radius: 15px;
		transition: 0.3s ease all;
		&:hover{ border-color: #1da4c5; }

		.icon{
			width: 31px;
			height: 28px;
			margin-top: 55%;
			display: inline-block;
			vertical-align: middle;
			background: url(../img/items-icon.png) no-repeat;
			&-pulse{
				background-position: 0 0;
			}
			&-pressure{
				background-position: -65px 0;
			}
			&-weight{
				background-position: -137px 0;
			}
			&-temp{
				background-position: 0 -57px;
			}
			&-sugar{
				background-position: -65px -57px;
			}
			&-cholesterol{
				background-position: -137px -57px;
			}
		}
	}

	label span{
		font-size: 12px;
		line-height: 16px;
		bottom: 15px;
		left: 50%;
		position: absolute;
		transform: translateX(-50%);
		font-family: 'Gotham-Medium';
		color: rgba(0,0,0,0.9);
	}

	input[type="checkbox"]{ display: none; }

	input[type="checkbox"] + label {
		display: inline-block;
		position: relative;
		cursor: pointer;
		color: #000;
		transition: 0.3s ease all;
	}

	input[type="checkbox"] + label::before{
		content: "";
		display: block;
		height: 18px;
		width: 18px;
		position: absolute;
		top: 8px; right: 8px;
		background: url(../img/checkbox-sprite-2.png) no-repeat;
		background-position: 0 0;
	}

	input[type="checkbox"] + label:hover:before {
		background-position: -28px 0;
	}

	input[type="checkbox"]:checked + label::before {
		background-position: -57px 0;
	}

	input[type="checkbox"]:checked + label{
		border-color: #1da4c5; 
	}
}

